# MedCP

./: .dxtignore  .env  .env.example  LICENSE  README.md  manifest.json  pyproject.toml
.python/lib/itcl4.2.2/: itclConfig.sh
.python/lib/python3.12/: _sysconfigdata__darwin_darwin.py
.python/lib/python3.12/config-3.12-darwin/: Makefile
releases/MedCP v0.1/: MedCP.dxt
releases/MedCP v0.2/: MedCP.dxt
releases/MedCP v0.3/: MedCP.dxt
server/: main.py
src/medcp/: __init__.py  __main__.py  cli.py  server.py
