[project]
name = "medcp"
version = "0.2.0"
description = "An MCP server that integrates electronic health record databases and a large-scale heterogeneous knowledge graph for rapid clinical record query and fast biomedical knowledge inference"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Wanjun Gu", email = "wanjun.gu@ucsf.edu"},
    {name = "Gianmarco Bellucci", email = "gianmarco.bellucci@ucsf.edu"}
]
maintainers = [
    {name = "Wanjun Gu", email = "wanjun.gu@ucsf.edu"},
    {name = "Gianmarco Bellucci", email = "gianmarco.bellucci@ucsf.edu"}
]
keywords = [
    "mcp",
    "medical",
    "clinical",
    "biomedical",
    "knowledge-graph",
    "electronic-health-records",
    "ehr",
    "neo4j",
    "sql-server",
    "healthcare",
    "bioinformatics",
    "clinical-informatics"
]
dependencies = [
    "fastmcp>=2.11.2",
    "neo4j>=5.28.2",
    "pydantic>=2.11.7",
    "pymssql>=2.3.7",
]
requires-python = ">=3.11"
